Bug 127924 - The Hyperlink tip is not displayed inside shape or text box (GTK3)
Summary: The Hyperlink tip is not displayed inside shape or text box (GTK3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Linux (All)
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: GTK3 Textbox Hyperlink Shapes
  Show dependency treegraph
 
Reported: 2019-10-02 11:30 UTC by Buovjaga
Modified: 2019-10-02 15:59 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2019-10-02 11:30:47 UTC
Continuation of bug 121014

1. Open attachment 146128 [details]
2. Hover your mouse over the hyperlink in the shape and the text box

With kf5 and gen backends the hyperlink tip for Ctrl-clicking is displayed.

Arch Linux 64-bit
Version: 6.4.0.0.alpha0+
Build ID: cb5eaa791739865d54b381c16c60224c432171dc
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 2 October 2019
Comment 1 Caolán McNamara 2019-10-02 11:58:34 UTC
This typically happens because the help area for the tip doesn't cover where the mouse current is
Comment 2 Commit Notification 2019-10-02 15:15:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5761a23608e3ed9744711666e7465d11a450dc58

Resolves: tdf#127924 give hyperlink tooltip an area

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2019-10-02 15:59:46 UTC
And there they are. Thanks!

Arch Linux 64-bit
Version: 6.4.0.0.alpha0+
Build ID: 6e7d9c4582c05eee47b0b455444e66b4f2445785
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 2 October 2019