Resolves: tdf#127924 give hyperlink tooltip an area

instead of just a point

Change-Id: Ibadecd64f3296264790373528427a7a528646c73